# gemini-proxy

./: .gitignore  demo.html  gemini.go  gemini_client.js  go.mod  main.go  pyproject.toml
gemini_client/: __init__.py  api.py  cli.py  tools.py
